# knowledge-catalog

./: .gitignore  .goreleaser.yaml  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SPEC.md  Taskfile.yml  go.mod  go.sum
.okf/: config.yaml  index.md
.okf/architecture/: index.md  overview.md  system-overview.md
.okf/codebase/: index.md
.okf/rules/: Always_run_golangci_lint_before_committing_Go_changes.md  index.md
agent-adapters/: antigravity.md  claude_code.md  copilot_instructions.md  cursor_rules.md
agent-adapters/claude-code/: settings.snippet.json
cmd/okf/: main.go  (+1 more)
okf/: README.md  bundle.go  bundle_test.go  context.go  context_test.go  document.go  document_test.go  extract.go  extract_codebase.go  extract_codebase_test.go  extract_openapi.go  extract_openapi_test.go  extract_sql.go  extract_sql_test.go  extract_test.go  extract_web.go  extract_web_test.go  fetch.go  fetch_test.go  mcp.go  mcp_test.go  paths.go  paths_test.go  pyproject.toml  remember.go  remember_test.go  service.go  service_test.go  synthesizer.go  synthesizer_test.go  viz.go  viz_test.go
okf/src/okf/: cli.py  context.py
okf/src/okf/bundle/: __init__.py  document.py  index.py  synthesizer.py  validator.py
okf/src/okf/extractors/: base.py  codebase.py  openapi.py  sql.py  web.py
okf/src/okf/mcp/: server.py
okf/src/okf/viewer/: __init__.py  generator.py
okf/src/okf/viewer/static/: viz.js
okf/src/okf/web/: fetcher.py
okf/tests/: test_document.py  test_extractors.py  test_index.py  test_validator.py  test_viewer.py
samples/: README.md
toolbox/: README.md
(+59 files in other folders)
